contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/jp/Vc2013/AiRepeat/Caio.h


//----------------------------------------------------------------------------------------------
//	イベントコントローラ接続先信号																
//----------------------------------------------------------------------------------------------
#define	AIOECU_DEST_AI_CLK			4	//アナログ入力サンプリングクロック
#define	AIOECU_DEST_AI_START		0	//アナログ入力変換開始信号
#define	AIOECU_DEST_AI_STOP			2	//アナログ入力変換停止信号
#define	AIOECU_DEST_AO_CLK			36	//アナログ出力サンプリングクロック
#define	AIOECU_DEST_AO_START		32	//アナログ出力変換開始信号
#define	AIOECU_DEST_AO_STOP			34	//アナログ出力変換停止信号
#define	AIOECU_DEST_CNT0_UPCLK		134	//カウンタ０アップクロック信号
#define	AIOECU_DEST_CNT1_UPCLK		135	//カウンタ１アップクロック信号
#define	AIOECU_DEST_CNT0_START		128	//カウンタ０、タイマ０動作開始信号
#define	AIOECU_DEST_CNT1_START		129	//カウンタ１、タイマ１動作開始信号
#define	AIOECU_DEST_CNT0_STOP		130	//カウンタ０、タイマ０動作停止信号
#define	AIOECU_DEST_CNT1_STOP		131	//カウンタ１、タイマ１動作停止信号
#define	AIOECU_DEST_MASTER1			104	//同期バスマスタ信号１
#define	AIOECU_DEST_MASTER2			105	//同期バスマスタ信号２
#define	AIOECU_DEST_MASTER3			106	//同期バスマスタ信号３

//----------------------------------------------------------------------------------------------
//	イベントコントローラ接続元信号																
//----------------------------------------------------------------------------------------------
#define	AIOECU_SRC_OPEN				-1	//未接続
#define	AIOECU_SRC_AI_CLK			4	//アナログ入力内部クロック信号
#define	AIOECU_SRC_AI_EXTCLK		146	//アナログ入力外部クロック信号
#define	AIOECU_SRC_AI_TRGSTART		144	//アナログ入力外部トリガ開始信号
#define	AIOECU_SRC_AI_LVSTART		28	//アナログ入力レベルトリガ開始信号
#define	AIOECU_SRC_AI_STOP			17	//アナログ入力変換回数終了信号（遅延なし）
#define	AIOECU_SRC_AI_STOP_DELAY	18	//アナログ入力変換回数終了信号（遅延あり）
#define	AIOECU_SRC_AI_LVSTOP		29	//アナログ入力レベルトリガ停止信号
#define	AIOECU_SRC_AI_TRGSTOP		145	//アナログ入力外部トリガ停止信号
#define	AIOECU_SRC_AO_CLK			66	//アナログ出力内部クロック信号
#define	AIOECU_SRC_AO_EXTCLK		149	//アナログ出力外部クロック信号
#define	AIOECU_SRC_AO_TRGSTART		147	//アナログ出力外部トリガ開始信号
#define	AIOECU_SRC_AO_STOP_FIFO		352	//アナログ出力指定回数出力終了信号（FIFO使用）
#define	AIOECU_SRC_AO_STOP_RING		80	//アナログ出力指定回数出力終了信号（RING使用）
#define	AIOECU_SRC_AO_TRGSTOP		148	//アナログ出力外部トリガ停止信号
#define	AIOECU_SRC_CNT0_UPCLK		150	//カウンタ０アップクロック信号
#define	AIOECU_SRC_CNT1_UPCLK		152	//カウンタ１アップクロック信号
#define	AIOECU_SRC_CNT0_CMP			288	//カウンタ０比較カウント一致
#define	AIOECU_SRC_CNT1_CMP			289	//カウンタ１比較カウント一致
#define	AIOECU_SRC_SLAVE1			136	//同期バススレーブ信号１
#define	AIOECU_SRC_SLAVE2			137	//同期バススレーブ信号２
#define	AIOECU_SRC_SLAVE3			138	//同期バススレーブ信号３
#define	AIOECU_SRC_START			384	//Ai, Ao, Cnt, Tmソフトウェア開始信号
#define	AIOECU_SRC_STOP				385	//Ai, Ao, Cnt, Tmソフトウェア停止信号

//----------------------------------------------------------------------------------------------
// Mデバイス用カウンタメッセージ
//----------------------------------------------------------------------------------------------
#define	AIOM_CNTM_COUNTUP_CH0		0x1070	// カウントアップ、チャネル番号0
#define	AIOM_CNTM_COUNTUP_CH1		0x1071	//         "                   1
#define	AIOM_CNTM_TIME_UP			0x1090	//タイムアップ
#define	AIOM_CNTM_COUNTER_ERROR		0x1091	//カウンタエラー
#define	AIOM_CNTM_CARRY_BORROW		0x1092	//キャリー／ボロー
//共通関数
long WINAPI AioInit(char * DeviceName, short * Id);

long WINAPI AioExit(short Id);

long WINAPI AioResetDevice(short Id);

long WINAPI AioGetErrorString(long ErrorCode, char * ErrorString);

long WINAPI AioQueryDeviceName(short Index, char * DeviceName, char * Device);

long WINAPI AioGetDeviceType(char * Device, short * DeviceType);

long WINAPI AioSetControlFilter(short Id, short Signal, float Value);

long WINAPI AioGetControlFilter(short Id, short Signal, float *Value);

long WINAPI AioResetProcess(short Id);