contec_hacking/research/additional_samples/Additional sample program  Analog Input Repeat Ver.1.00/AiRepeat/Sample/eng/VbNet2013/AiRepeat/Caio.vb

	
	'-----------------------------------------------------------------------------------------------
	' Destination Signal
	'-----------------------------------------------------------------------------------------------
	Public Const AIOECU_DEST_AI_CLK As Short = 4					'Analog input sampling clock
	Public Const AIOECU_DEST_AI_START As Short = 0					'Analog input converting start signal
	Public Const AIOECU_DEST_AI_STOP As Short = 2					'Analog input converting stop signal
	Public Const AIOECU_DEST_AO_CLK As Short = 36					'Analog output sampling clock
	Public Const AIOECU_DEST_AO_START As Short = 32					'Analog output converting start signal
	Public Const AIOECU_DEST_AO_STOP As Short = 34					'Analog output converting stop signal
	Public Const AIOECU_DEST_CNT0_UPCLK As Short = 134				'Up clock signal of counter 0
	Public Const AIOECU_DEST_CNT1_UPCLK As Short = 135				'Up clock signal of counter 1
	Public Const AIOECU_DEST_CNT0_START As Short = 128				'Start signal of counter 0, timer 0
	Public Const AIOECU_DEST_CNT1_START As Short = 129				'Start signal of counter 1, timer 1
	Public Const AIOECU_DEST_CNT0_STOP As Short = 130				'Stop signal of counter 0, timer 0
	Public Const AIOECU_DEST_CNT1_STOP As Short = 131				'Stop signal of counter 1, timer 1
	Public Const AIOECU_DEST_MASTER1 As Short = 104					'ynchronization bus master signal 1
	Public Const AIOECU_DEST_MASTER2 As Short = 105					'ynchronization bus master signal 2
	Public Const AIOECU_DEST_MASTER3 As Short = 106					'ynchronization bus master signal 3
	
	'-----------------------------------------------------------------------------------------------
	' Event Controller Source Signal
	'-----------------------------------------------------------------------------------------------
	Public Const AIOECU_SRC_OPEN As Short = -1					    'Not connected 
	Public Const AIOECU_SRC_AI_CLK As Short = 4					    'Analog input internal clock signal
	Public Const AIOECU_SRC_AI_EXTCLK As Short = 146				'Analog input external clock signal
	Public Const AIOECU_SRC_AI_TRGSTART As Short = 144				'Analog input external trigger start signal
	Public Const AIOECU_SRC_AI_LVSTART As Short = 28				'Analog input level trigger start signal
	Public Const AIOECU_SRC_AI_STOP As Short = 17					'Analog input signal that data of the specified sampling times have been converted (No delay)
	Public Const AIOECU_SRC_AI_STOP_DELAY As Short = 18				'Analog input signal that data of the specified sampling times have been converted (delay)
	Public Const AIOECU_SRC_AI_LVSTOP As Short = 29					'Analog input level trigger stop signal
	Public Const AIOECU_SRC_AI_TRGSTOP As Short = 145				'Analog input external trigger stop signal
	Public Const AIOECU_SRC_AO_CLK As Short = 66					'Analog output internal clock signal
	Public Const AIOECU_SRC_AO_EXTCLK As Short = 149				'Analog output external clock signal
	Public Const AIOECU_SRC_AO_TRGSTART As Short = 147				'Analog output external trigger start signal
	Public Const AIOECU_SRC_AO_STOP_FIFO As Short = 352				'Analog output signal that data of the specified sampling times have been output (FIFO)
	Public Const AIOECU_SRC_AO_STOP_RING As Short = 80				'Analog output signal that data of the specified sampling times have been output (RING)
	Public Const AIOECU_SRC_AO_TRGSTOP As Short = 148				'Analog output external trigger stop signal
	Public Const AIOECU_SRC_CNT0_UPCLK As Short = 150				'Up clock signal of counter 0
	Public Const AIOECU_SRC_CNT1_UPCLK As Short = 152				'Up clock signal of counter 1
	Public Const AIOECU_SRC_CNT0_CMP As Short = 288					'Up clock signal of counter 0
	Public Const AIOECU_SRC_CNT1_CMP As Short = 289					'Up clock signal of counter 1
	Public Const AIOECU_SRC_SLAVE1 As Short = 136					'Synchronization bus master signal 1
	Public Const AIOECU_SRC_SLAVE2 As Short = 137					'Synchronization bus master signal 2
	Public Const AIOECU_SRC_SLAVE3 As Short = 138					'Synchronization bus master signal 3
	Public Const AIOECU_SRC_START As Short = 384					'Ai, Ao, Cnt, Tm software start signal
	Public Const AIOECU_SRC_STOP As Short = 385					    'Ai, Ao, Cnt, Tm software stop signal

    '-------------------------------------------------
    ' M-device counter Message
    '-------------------------------------------------
    Public Const AIOM_CNTM_COUNTUP_CH0 As Short = &H1070            'COUNTUP, CHANNEL No.0
    Public Const AIOM_CNTM_COUNTUP_CH1 As Short = &H1071            '		"			 1

    Public Const AIOM_CNTM_TIME_UP As Short = &H1090                'Timer
    Public Const AIOM_CNTM_COUNTER_ERROR As Short = &H1091S         'Counter error
    Public Const AIOM_CNTM_CARRY_BORROW As Short = &H1092S          'Carry/Borrow

    '-------------------------------------------------------------
    ' Delegate
    '-------------------------------------------------------------
    Public Delegate Sub PAICALLBACK(ByVal Id As Short, ByVal Message As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    Public Delegate Sub PAOCALLBACK(ByVal Id As Short, ByVal Message As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    Public Delegate Sub PCNTCALLBACK(ByVal Id As Short, ByVal Message As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    Public Delegate Sub PTMCALLBACK(ByVal Id As Short, ByVal Message As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    ' Start for M-device
    Public Delegate Sub PAIOCNTMCOUNTUPCALLBACK(ByVal Id As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    Public Delegate Sub PAIOCNTMCOUNTERERRORCALLBACK(ByVal Id As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    Public Delegate Sub PAIOCNTMCARRYBORROWCALLBACK(ByVal Id As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    Public Delegate Sub PAIOCNTMTMCALLBACK(ByVal Id As Short, ByVal wParam As Integer, ByVal lParam As Integer, ByVal Param As IntPtr)
    ' End for M-device

    '-----------------------------------------------------------------------------------------------
    ' Function Prototype
    '-----------------------------------------------------------------------------------------------
    'Common Function
    Declare Function AioInit Lib "CAIO.DLL" (ByVal DeviceName As String, ByRef Id As Short) As Integer
    Declare Function AioExit Lib "CAIO.DLL" (ByVal Id As Short) As Integer
    Declare Function AioResetDevice Lib "CAIO.DLL" (ByVal Id As Short) As Integer
    Declare Function AioGetErrorString Lib "CAIO.DLL" (ByVal ErrorCode As Integer, ByVal ErrorString As StringBuilder) As Integer
    Declare Function AioQueryDeviceName Lib "CAIO.DLL" (ByVal Index As Short, ByVal DeviceName As String, ByVal Device As String) As Integer
    Declare Function AioGetDeviceType Lib "CAIO.DLL" (ByVal Device As String, ByRef DeviceType As Short) As Integer
    Declare Function AioSetControlFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal Signal As Short, ByVal Value As Single) As Integer
    Declare Function AioGetControlFilter Lib "CAIO.DLL" (ByVal Id As Short, ByVal Signal As Short, ByRef Value As Single) As Integer
    Declare Function AioResetProcess Lib "CAIO.DLL" (ByVal Id As Short) As Integer
